[tool.poetry]
name = "kb-api-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "kb_api_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
motor = "^3.1.1"
databases = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
