[tool.poetry]
name = "kb-api-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "kb_api_backend" }]

[tool.poetry.dependencies]
python = "^3.11"
config = "^0.5.1"
fastapi-users = {extras = ["beanie"], version = "^10.3.0"}
uvicorn = "^0.20.0"
motor = "^3.1.1"
beanie = "^1.17.0"
python-dotenv = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
